--- a/Porfolio Website (New)/index.html
+++ b/Porfolio Website (New)/index.html
@@ -1,1 +1,70 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title> StephenPS </title>
+        <link rel="icon" type="image/x-icon" href="Images/giant-panda-eating_4x3.png">
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet">
+    </head>
 
+<body data-theme="dark">
+<div id="navbar">
+    <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="hamburger">☰</label>
+    
+    <div class="nav-right">
+        <button class="theme-toggle" onclick="toggleTheme()">☀ Toggle Theme</button>
+        <img class="topimg" src="Images/giant-panda-eating_4x3.png" alt="Logo">
+        <span class="username">StephenPS</span>
+    </div>
+    
+    <div class="nav-left">
+        <a class="active-navlink" href="main.html">Home</a>
+        <a class="navlink" href="coding_projects.html">Coding Projects</a>
+        <a class="navlink" href="chess.html">Chess</a>
+        <a class="navlink" href="other.html">Misc.</a>
+        <a class="navlink" href="contact.html">Contact</a>
+    </div>
+</div>
+
+    <div id="topcontent">   
+        <h1 class="welcome"> Welcome to Stephen's Website! </h1>
+        <img class="welcomeimg" src="Images/giant-panda-eating_4x3.png" alt="StephenPS Logo">
+        <p class="welcometext"> Hello! My name is Stephen, and this is my personal website where I showcase my coding projects, chess endeavors, and other miscellaneous interests. Feel free to explore the different sections using the navigation bar above. Enjoy your stay! </p>
+        <h2 class="h2-default"> My Favourite Quote </h2>
+        <section class="quote-parallax">
+            <div class="quote-overlay">
+            <p class="quote-text">"Two things are infinite: the universe and human stupidity, and I'm not sure about the universe."
+            <br>— Albert Einstein</p>
+            </div>
+        </section>
+        </div>
+    </div>
+    <h2 class="h2-default"> My Interests </h2>
+    <div class="interest-container">
+        <div class="coding">
+            <h3 class="h3-default"> Coding </h3>
+            <p> I enjoy writing code, building websites, working on UI designs, making other designs in general, working with Aurdino, coding simple stuff in python, and many more! I know HTML, CSS, and a little bit of C, C++, Javascript, and Python.
+                Check out my coding projects page to see some of the stuff I've made! </p>
+        </div>
+        <div class="chess">
+            <h3 class="h3-default"> Chess </h3>
+            <p> I have been playing chess for over five years. I play regularly on online chess sites, such as Lichess and Chess.com. I have also played a few chess tournaments, representing
+                my school, and have won many prizes. Besides, I also have a FIDE Rating, of 1539, and an Online Fide Arena International Master (FOA AIM) Title. </p>
+        </div>
+        <div class="quizzing">
+            <h3 class="h3-default"> Quizzing </h3>
+            <p> I like quizzing, and learning new things in general! Particularly, I like reading about history, and sciences. I have participated in multiple quizzes, winning a few of them. Besides, I also like reading non-fiction books.  I have
+                written multiple exams on science and math subjects, scoring well in most of them. Check out my miscellaneous page to see some of the other stuff I like!
+            </p>
+        </div></div>
+        <footer>
+            <p class="footer-text"> &copy; 2026 StephenPS. All rights reserved. </p>
+        </footer>
+</body>
+</html>
